--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nox_console_hook"
+name = "hookexample"
 version = "0.1.0"
 authors = ["Mack Stump <mack@mackstump.com>"]
 edition = "2018"
@@ -10,5 +10,7 @@ crate-type = ["cdylib"]
 [dependencies]
 detour = { version = "0.6.0", default-features = false }
 lazy_static = "1.3.0"
+log = "0.4"
+simple_logger = "1.0.1"
 widestring = "0.4.0"
 winapi = { version = "0.3.6", features = ["consoleapi"] }
