--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ lazy_static = "1.3.0"
 log = "0.4"
 simple_logger = "1.0.1"
 widestring = "0.4.0"
-winapi = { version = "0.3.6", features = ["consoleapi"] }
+winapi = { version = "0.3.6", features = ["consoleapi", "wincon"] }
